--- a/index.html
+++ b/index.html
@@ -11,6 +11,44 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+
+
+  <!-- SEO TAGS -->
+  <!-- Primary Meta Tags -->
+  <meta name="title" content="Madia Abogados — Especialistas en derecho familiar">
+  <meta name="description"
+    content="Grupo de abogados dedicados a resolver casos relacionados con: Herencias, Divorcios, Pensión alimenticia, Guarda y custodia, Juicios de interdicción.">
+  <meta name="keywords"
+    content="Herencias, Divorcios, Pensión alimenticia, Guarda y custodia, Juicios de interdicción.">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="language" content="Spanish">
+  <meta name="revisit-after" content="10 days">
+  <meta name="author" content="Madia abogados">
+
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://madia.com" />
+  <meta property="og:title" content="Madia Abogados — Especialistas en derecho familiar" />
+  <meta property="og:description"
+    content="Grupo de abogados dedicados a resolver casos relacionados con: Herencias, Divorcios, Pensión alimenticia, Guarda y custodia, Juicios de interdicción." />
+  <meta property="og:image" content="./src/assets/madia-logo-web.svg" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://madia.com" />
+  <meta property="twitter:title" content="Madia Abogados — Especialistas en derecho familiar" />
+  <meta property="twitter:description"
+    content="Grupo de abogados dedicados a resolver casos relacionados con: Herencias, Divorcios, Pensión alimenticia, Guarda y custodia, Juicios de interdicción." />
+  <meta property="twitter:image" content="./src/assets/madia-logo-web.svg" />
+
+
+
+
+
+
   <title>Madia</title>
 </head>
 
