--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="./src/assets/favicon-madia.svg" />
   <link
     href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
@@ -30,7 +30,7 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://madia.com" />
+  <meta property="og:url" content="./src/assets/open-grap-image.jpg" />
   <meta property="og:title" content="Madia Abogados — Especialistas en derecho familiar" />
   <meta property="og:description"
     content="Grupo de abogados dedicados a resolver casos relacionados con: Herencias, Divorcios, Pensión alimenticia, Guarda y custodia, Juicios de interdicción." />
