--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 <html lang="es">
 
 <head>
+  <!-- Google ANALYTICS -->
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1V1TRHFW3Q"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-1V1TRHFW3Q');
+  </script>
+
+
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="./src/assets/favicon-madia.svg" />
   <!-- <link
@@ -16,7 +28,7 @@
 
   <!-- SEO TAGS -->
   <!-- Primary Meta Tags -->
-  <meta name="title" content="Madia Abogados — Especialistas en derecho familiar">
+  <meta name="title" content="MADIA Abogados — Especialistas en derecho familiar">
   <meta name="description"
     content="Grupo de abogados dedicados a resolver casos relacionados con: Herencias, Divorcios, Pensión alimenticia, Guarda y custodia, Juicios de interdicción.">
   <meta name="keywords"
@@ -25,31 +37,31 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="Spanish">
   <meta name="revisit-after" content="10 days">
-  <meta name="author" content="Madia abogados">
+  <meta name="author" content="MADIA abogados">
 
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="./src/assets/open-grap-image.jpg" />
-  <meta property="og:title" content="Madia Abogados — Especialistas en derecho familiar" />
+  <meta property="og:url" content="https://www.madiaabogados.com.mx/" />
+  <meta property="og:title" content="MADIA Abogados — Especialistas en derecho familiar" />
   <meta property="og:description"
     content="Grupo de abogados dedicados a resolver casos relacionados con: Herencias, Divorcios, Pensión alimenticia, Guarda y custodia, Juicios de interdicción." />
-  <meta property="og:image" content="./src/assets/madia-logo-web.svg" />
+  <meta property="og:image" content="https://www.madiaabogados.com.mx/assets/open-grap-image.jpg" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://madia.com" />
-  <meta property="twitter:title" content="Madia Abogados — Especialistas en derecho familiar" />
+  <meta property="twitter:url" content="https://www.madiaabogados.com.mx/" />
+  <meta property="twitter:title" content="MADIA Abogados — Especialistas en derecho familiar" />
   <meta property="twitter:description"
     content="Grupo de abogados dedicados a resolver casos relacionados con: Herencias, Divorcios, Pensión alimenticia, Guarda y custodia, Juicios de interdicción." />
-  <meta property="twitter:image" content="./src/assets/madia-logo-web.svg" />
+  <meta property="twitter:image" content="https://www.madiaabogados.com.mx/assets/open-grap-image.jpg" />
 
 
 
 
 
 
-  <title>Madia</title>
+  <title>MADIA - Abogados</title>
 </head>
 
 <body>
